--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8082
 spring.data.mongodb.uri=mongodb+srv://tarik:aVKnZEIXKUxvO6o0@testcluster1.jutkz.mongodb.net/account-service?retryWrites=true&w=majority
 spring.data.mongodb.database=account-service
+eureka.client.service-url.defaultZone: https://eureka-disc-service.herokuapp.com/eureka
