--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,7 @@ server.port=8082
 spring.application.name=account-service
 spring.data.mongodb.uri=mongodb+srv://tarik:aVKnZEIXKUxvO6o0@testcluster1.jutkz.mongodb.net/account-service?retryWrites=true&w=majority
 spring.data.mongodb.database=account-service
+spring.cloud.discovery.enabled=true
 eureka.client.service-url.defaultZone=https://eureka-disc-service.herokuapp.com/eureka
+eureka.instance.prefer-ip-address=true
 eureka.instance.hostname= ensaspay-account-service.herokuapp.com
