--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.data.mongodb.uri=mongodb+srv://tarik:aVKnZEIXKUxvO6o0@testcluster1.jutkz.
 spring.data.mongodb.database=account-service
 spring.cloud.discovery.enabled=true
 eureka.client.service-url.defaultZone=https://eureka-disc-service.herokuapp.com/eureka
-eureka.instance.prefer-ip-address=true
+eureka.instance.preferIpAddress=true
 eureka.instance.hostname= ensaspay-account-service.herokuapp.com
