--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.data.mongodb.uri=mongodb+srv://tarik:aVKnZEIXKUxvO6o0@testcluster1.jutkz.
 spring.data.mongodb.database=account-service
 
 
-eureka.client.service-url.defaultZone=https://eureka-disc-service.herokuapp.com/eureka
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
+#eureka.client.service-url.defaultZone=https://eureka-disc-service.herokuapp.com/eureka
+#eureka.client.register-with-eureka=true
+#eureka.client.fetch-registry=true
 #eureka.instance.hostname= ensaspay-account-service.herokuapp.com
